fixes alignment issues in all browsers and bg or left/right arrows, fixes #5942
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12749 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/Dialog.css
+++ b/themes/tundra/Dialog.css
@@ -130,10 +130,10 @@
 }
 
 .tundra .dijitTooltipLeft {
-	padding-right: 13px;
+	padding-right: 14px;
 }
 .dj_ie6 .tundra .dijitTooltipLeft {
-	padding-right: 15px;
+	padding-left: 15px;
 }
 .tundra .dijitTooltipLeft .dijitTooltipConnector {
 	/* the arrow piece for tooltips to the left of an element, bottom borders aligned */
@@ -148,7 +148,7 @@
 }
 
 .tundra .dijitTooltipRight {
-	padding-left: 13px;
+	padding-left: 14px;
 }
 .tundra .dijitTooltipRight .dijitTooltipConnector {
 	/* the arrow piece for tooltips to the right of an element, bottom borders aligned */
